Closed Bug 10268 Opened 26 years ago Closed 26 years ago

page comes up all black

Categories

(Core :: Layout, defect, P3)

x86
Linux
defect

Tracking

()

VERIFIED FIXED

People

(Reporter: dbaron, Assigned: troy)

References

()

Details

On 1999-07-20-10-M9, Linux, apprunner or viewer, my home page (URL above) comes up all black once the stylesheets are loaded. This is a major regression.
Status: NEW → ASSIGNED
Sure enough it does. Is it possible for you to find a small example (without all the linked style sheets) that reproduces the problem? I looked at it a bit, and it's not at all clear what regressed and with so many people making changes this is going to be very hard to track down Thanks, Troy
OK. I'll look at it, but maybe not for an hour or two...
Thanks
Simplified version is at (for now): http://www.fas.harvard.edu/~dbaron/black The problem only occurs after the reflow caused by the CSS Loader finishing. I *need* to link to an empty linked stylesheet to get the problem. The position: relative is the other piece needed. This looks weird.
Thanks for the simplifying test case. I'll look at it today
Status: ASSIGNED → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
Okay, I found the problem. It was a recently introduced regression (by me actually), where I had a typo where I wrote '&&' when I meant to use '||'. That caused the wrong type of frame to be created for the relatively positioned H1 element Turns out it had nothing to do with the empty linked stylesheet. The reduced case was a very big help. Thanks
*** Bug 10455 has been marked as a duplicate of this bug. ***
Status: RESOLVED → VERIFIED
This problem has been fixed in the Linux July 27th Build (1999072711).
You need to log in before you can comment on or make changes to this bug.