Fix for bug #10268. I used '&&' when I really meant to use '||' and that caused us to create the wrong type of frame for relatively positioned H1 elements